Endpoint for query by year implemented
