# server/api/controllers/colombia_weather/router.js
@@ -2,4 +2,5 @@ import * as express from 'express';
 import controller from './controller'
 export default express.Router()
     .post('/', ::controller.create)
-    .get('/', ::controller.all);
+    .get('/', ::controller.all)
+    .get('/:year', ::controller.get);
